RESOLVED FIXED111217
REGRESSION(r143727): Clicking / selecting inside an <embed> is broken
https://bugs.webkit.org/show_bug.cgi?id=111217
Summary REGRESSION(r143727): Clicking / selecting inside an <embed> is broken
Julien Chaffraix
Reported 2013-03-01 13:41:25 PST
Created attachment 191028 [details] Zip of the test case as it requires 2 files r143727 made us regress the hit testing on embed (haven't tried plugins too). For some reason, we still update the cursor as we move the mouse but the click seems to be stopped at the embed (as shown if you try using the web-inspector).
Attachments
Zip of the test case as it requires 2 files (536 bytes, application/zip)
2013-03-01 13:41 PST, Julien Chaffraix
no flags
Patch (6.45 KB, patch)
2013-03-06 09:25 PST, Allan Sandfeld Jensen
no flags
Patch (7.15 KB, patch)
2013-03-06 09:34 PST, Allan Sandfeld Jensen
no flags
Patch (12.94 KB, patch)
2013-03-07 02:27 PST, Allan Sandfeld Jensen
jchaffraix: review+
jchaffraix: commit-queue-
Alexey Proskuryakov
Comment 1 2013-03-05 10:16:55 PST
What is the next step here? <http://trac.webkit.org/changeset/143727> sounds like a non-essential improvement per ChangeLog, would rolling it out be appropriate?
Julien Chaffraix
Comment 2 2013-03-05 19:09:55 PST
Got another reproduction and it turns out that hit-testing through <object> is also broken: http://jsfiddle.net/2RyWt/2/ > What is the next step here? <http://trac.webkit.org/changeset/143727> sounds like a non-essential improvement per ChangeLog, would rolling it out be appropriate? I am in favor of rolling out unless something is done within 1 or 2 days. I don't have the bandwidth to investigate this bug but I will be happy to handle the revert. The change was supposed to be a refactoring but it turns out to be major hit testing regression.
Allan Sandfeld Jensen
Comment 3 2013-03-06 09:25:16 PST
Early Warning System Bot
Comment 4 2013-03-06 09:29:25 PST
Build Bot
Comment 5 2013-03-06 09:29:53 PST
WebKit Review Bot
Comment 6 2013-03-06 09:30:39 PST
Comment on attachment 191765 [details] Patch Attachment 191765 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/16985224
Peter Beverloo (cr-android ews)
Comment 7 2013-03-06 09:34:43 PST
Comment on attachment 191765 [details] Patch Attachment 191765 [details] did not pass cr-android-ews (chromium-android): Output: http://webkit-commit-queue.appspot.com/results/17072114
Allan Sandfeld Jensen
Comment 8 2013-03-06 09:34:56 PST
Created attachment 191770 [details] Patch Missed file
Early Warning System Bot
Comment 9 2013-03-06 09:43:41 PST
WebKit Review Bot
Comment 10 2013-03-06 09:44:59 PST
Comment on attachment 191770 [details] Patch Attachment 191770 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17079151
Build Bot
Comment 11 2013-03-06 09:49:41 PST
EFL EWS Bot
Comment 12 2013-03-06 09:49:53 PST
WebKit Review Bot
Comment 13 2013-03-06 09:51:02 PST
Comment on attachment 191770 [details] Patch Attachment 191770 [details] did not pass cr-linux-debug-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17027093
Peter Beverloo (cr-android ews)
Comment 14 2013-03-06 10:01:01 PST
Comment on attachment 191770 [details] Patch Attachment 191770 [details] did not pass cr-android-ews (chromium-android): Output: http://webkit-commit-queue.appspot.com/results/17072126
Allan Sandfeld Jensen
Comment 15 2013-03-06 10:01:05 PST
Comment on attachment 191770 [details] Patch Needs a test, and be uploaded correctly.
Early Warning System Bot
Comment 16 2013-03-06 10:31:18 PST
Antonio Gomes
Comment 17 2013-03-06 19:28:09 PST
It should be at least linked to the offending commit.
Allan Sandfeld Jensen
Comment 18 2013-03-07 02:27:16 PST
Julien Chaffraix
Comment 19 2013-03-07 10:12:07 PST
Comment on attachment 191957 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=191957&action=review > LayoutTests/fast/dom/nodesFromRect/nodesFromRect-embedded-frame-content.html:34 > + <embed id="iframe1" src="resources/child-frame.html"></embed> There was another test that was linked to that used <object>: http://jsfiddle.net/2RyWt/2/ I think it's worthwhile to add this case too.
Allan Sandfeld Jensen
Comment 20 2013-03-07 10:37:10 PST
Note You need to log in before you can comment on or make changes to this bug.