REGRESSION(r143727): Clicking / selecting inside an <embed> is broken https://bugs.webkit.org/show_bug.cgi?id=111217

Reviewed by Julien Chaffraix.

Source/WebCore:

Hit-testing into child frames need to happen in RenderPart, otherwise
we will miss frame views in <embed> and <object> elements.

Test: fast/dom/nodesFromRect/nodesFromRect-embedded-frame-content.html

* rendering/RenderFrameBase.cpp:
* rendering/RenderFrameBase.h:
(RenderFrameBase):
* rendering/RenderPart.cpp:
(WebCore::RenderPart::nodeAtPoint):
* rendering/RenderPart.h:
(RenderPart):

LayoutTests:

Test rect and point based hit-testing inside embed and object child frames.

* fast/dom/nodesFromRect/nodesFromRect-embedded-frame-content-expected.txt: Added.
* fast/dom/nodesFromRect/nodesFromRect-embedded-frame-content.html: Added.
* fast/dom/nodesFromRect/resources/nodesFromRect.js:
(checkPoint):

Canonical link: https://commits.webkit.org/130095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145098 268f45cc-cd09-0410-ab3c-d52691b4dbfc